{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 21,
  "lineage": "0c65c511-bdf8-a11b-602d-989bfb5b5915",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:721895580956:instance/i-0fd3632e46f4a2728",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd3632e46f4a2728",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d20c6b6a22ce3fe6",
            "private_dns": "ip-10-1-0-199.ec2.internal",
            "private_ip": "10.1.0.199",
            "public_dns": "ec2-3-84-115-194.compute-1.amazonaws.com",
            "public_ip": "3.84.115.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051f5b927662793a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff2aba05fc9ed813",
            "tags": {
              "Name": "ansibleNode"
            },
            "tags_all": {
              "Name": "ansibleNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077347beae31ff68c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:721895580956:instance/i-07bec7618ed31b3e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bec7618ed31b3e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a45ca8fbc99fe21a",
            "private_dns": "ip-10-1-1-144.ec2.internal",
            "private_ip": "10.1.1.144",
            "public_dns": "ec2-54-88-179-118.compute-1.amazonaws.com",
            "public_ip": "54.88.179.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b8eb103a012e152",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5701a8f31b5b2c0",
            "tags": {
              "Name": "ansibleNode2"
            },
            "tags_all": {
              "Name": "ansibleNode2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077347beae31ff68c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:721895580956:instance/i-057d86c6739c24a54",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057d86c6739c24a54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03d36b8d65a4430e1",
            "private_dns": "ip-10-1-0-59.ec2.internal",
            "private_ip": "10.1.0.59",
            "public_dns": "ec2-54-159-170-28.compute-1.amazonaws.com",
            "public_ip": "54.159.170.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f26669b02aecf32c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff2aba05fc9ed813",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077347beae31ff68c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:721895580956:instance/i-0da18be294304d11a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da18be294304d11a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0553bcb182fe0d363",
            "private_dns": "ip-10-1-1-75.ec2.internal",
            "private_ip": "10.1.1.75",
            "public_dns": "ec2-34-207-112-2.compute-1.amazonaws.com",
            "public_ip": "34.207.112.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a0e4fdd6e32cafb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5701a8f31b5b2c0",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077347beae31ff68c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:721895580956:instance/i-09faa27a3c74bf5bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09faa27a3c74bf5bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a13bc547482f7e7c",
            "private_dns": "ip-10-1-0-242.ec2.internal",
            "private_ip": "10.1.0.242",
            "public_dns": "ec2-34-203-206-251.compute-1.amazonaws.com",
            "public_ip": "34.203.206.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0707f2c283888f62b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff2aba05fc9ed813",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077347beae31ff68c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:721895580956:instance/i-00ef641b263840b4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ef641b263840b4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02dd3bffa231d3be7",
            "private_dns": "ip-10-1-1-247.ec2.internal",
            "private_ip": "10.1.1.247",
            "public_dns": "ec2-54-196-163-32.compute-1.amazonaws.com",
            "public_ip": "54.196.163.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6456dbff0fe4f3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5701a8f31b5b2c0",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077347beae31ff68c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_web",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testIgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:internet-gateway/igw-01aba278fe990c1bc",
            "id": "igw-01aba278fe990c1bc",
            "owner_id": "721895580956",
            "tags": {
              "Name": "testIgw"
            },
            "tags_all": {
              "Name": "testIgw"
            },
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:loadbalancer/app/web-elb/8ce331377ae49637",
            "arn_suffix": "app/web-elb/8ce331377ae49637",
            "dns_name": "web-elb-257072795.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:721895580956:loadbalancer/app/web-elb/8ce331377ae49637",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-elb",
            "security_groups": [
              "sg-0edef00e448528cea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d5701a8f31b5b2c0"
              },
              {
                "subnet_id": "subnet-0ff2aba05fc9ed813"
              }
            ],
            "subnets": [
              "subnet-0d5701a8f31b5b2c0",
              "subnet-0ff2aba05fc9ed813"
            ],
            "vpc_id": "vpc-0d765fd2286e98f53",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:listener/app/web-elb/8ce331377ae49637/d6cabec4fc4efbb6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:721895580956:listener/app/web-elb/8ce331377ae49637/d6cabec4fc4efbb6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:loadbalancer/app/web-elb/8ce331377ae49637",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.elb-sg",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6",
            "arn_suffix": "targetgroup/tf-target-group/6fdc83bbd55a3ff6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "dependencies": [
            "aws_lb.webLB",
            "aws_security_group.elb-sg",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6-20210517071625780300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6",
            "target_id": "i-09faa27a3c74bf5bc"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.allow_ssh_web",
            "aws_security_group.elb-sg",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6-20210517071625867900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:721895580956:targetgroup/tf-target-group/6fdc83bbd55a3ff6",
            "target_id": "i-057d86c6739c24a54"
          },
          "dependencies": [
            "aws_instance.db1",
            "aws_lb.webLB",
            "aws_lb_target_group.tgp",
            "aws_security_group.allow_ssh_web",
            "aws_security_group.elb-sg",
            "aws_subnet.Public1",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:route-table/rtb-02e955f1e64b8c00a",
            "id": "rtb-02e955f1e64b8c00a",
            "owner_id": "721895580956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01aba278fe990c1bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRoute"
            },
            "tags_all": {
              "Name": "publicRoute"
            },
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8f06fbc60ec088",
            "route_table_id": "rtb-02e955f1e64b8c00a",
            "subnet_id": "subnet-0ff2aba05fc9ed813"
          },
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public1",
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c532b17a1d889aa0",
            "route_table_id": "rtb-02e955f1e64b8c00a",
            "subnet_id": "subnet-0d5701a8f31b5b2c0"
          },
          "dependencies": [
            "aws_internet_gateway.testIgw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public2",
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:security-group/sg-077347beae31ff68c",
            "description": "Allow ssh and web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077347beae31ff68c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Project-NPA",
            "name_prefix": "",
            "owner_id": "721895580956",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:security-group/sg-0edef00e448528cea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edef00e448528cea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "721895580956",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:subnet/subnet-0ff2aba05fc9ed813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0ff2aba05fc9ed813",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721895580956",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "dependencies": [
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:subnet/subnet-0d5701a8f31b5b2c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0d5701a8f31b5b2c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "721895580956",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-0d765fd2286e98f53"
          },
          "dependencies": [
            "aws_vpc.testVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721895580956:vpc/vpc-0d765fd2286e98f53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f1cf7f692abefb45",
            "default_route_table_id": "rtb-0552bdb75432e1183",
            "default_security_group_id": "sg-0cdc67bb1b962f94c",
            "dhcp_options_id": "dopt-0cff3678aa68c75cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d765fd2286e98f53",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0552bdb75432e1183",
            "owner_id": "721895580956",
            "tags": {
              "Name": "testVPC"
            },
            "tags_all": {
              "Name": "testVPC"
            }
          }
        }
      ]
    }
  ]
}